# server/login/services.js
@@ -1,0 +1,9 @@
+const mongoConnectionManager = require("../../server/baseMongo/MongoConnectionManager");
+
+let authentication = function(login, password) {
+    return mongoConnectionManager.collections.usersDal.findByLogin(login);
+}
+
+module.exports = {
+    authentication: authentication
+}
